# game_engine

./: .gitignore  Cargo.toml  README.md
crates/graphics/: Cargo.toml
crates/graphics-macro/: Cargo.toml
crates/graphics-macro/src/: lib.rs
crates/graphics/examples/: basic_example.rs  fullscreen_texture.rs  triangle.rs
crates/graphics/graphics-macro/: Cargo.toml
crates/graphics/graphics-macro/src/: lib.rs
crates/graphics/src/: instance.rs  lib.rs
crates/graphics/src/device/: device_context.rs  graphics_queue.rs
crates/graphics/src/queue/: local_thread_pool.rs  logical_queue.rs  queue_family.rs
crates/graphics/src/render_graph/: dag.rs  gpu_operation.rs  mod.rs  render_graph.rs  resource.rs
crates/graphics/src/render_graph/operations/: draw_call.rs  gpu_operation.rs
crates/graphics/src/rendering/: buffer_container.rs  descriptor_container.rs  framebuffer_container.rs  mod.rs  pipeline_container.rs  render_pass.rs  shader_container.rs  texture_container.rs
crates/graphics/src/swapchain/: frame_data.rs  frame_sync.rs  swapchain.rs
examples/: simple.rs
src/: lib.rs
