[package]
name = "graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
log = "*"
simple_logger = "*"
winit = "0.30"
image = "0.25"
slotmap = "*"
dashmap = "*"

[[test]]
name = "basic"
path = "tests/basic/basic_example.rs"
harness = false