[package]
name = "graphics"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
ash = "0.38"
ash-window = "0.13"
dashmap = "6.1.0"
encase = "0.12"
gpu-allocator = { version = "0.28.0", default-features = false, features = [
  "std",
  "vulkan",
] }
graphics-macro = { path = "graphics-macro" }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
log = { workspace = true }
naga = { version = "25.0.1", default-features = false, features = [
  "glsl-in",
  "spv-out",
] }
raw-window-handle = "0.6"
simple_logger = { workspace = true }
slotmap = "1.1.1"
winit = "0.30"
